--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -19,8 +19,46 @@
     const roomName = JSON.parse(document.getElementById('room-name').textContent);
     const userName = document.querySelector('#username');
     const user = userName.value;
+    // const chatSocket = new WebSocket(
+    //     'ws://'
+    //     + window.location.host
+    //     + '/ws/profile/chat/'
+    //     + roomName
+    //     + '/'
+    // );
+    // chatSocket.onmessage = function (e) {
+    //     const data = JSON.parse(e.data);
+    //     console.log(data)
+    //     const newMessage = document.createElement('p')
+    //     newMessage.innerHTML = `${data.message[1]}:${data.message[0]}`
+    //     if (data.message[1] == user) {
+    //         newMessage.classList.add('user1')
+    //     } else {
+    //         newMessage.classList.add('user2')
+    //     }
+    //     document.querySelector('#chat-log').appendChild(newMessage)
+    // };
+    // chatSocket.onclose = function (e) {
+    //     console.error('Chat socket closed unexpectedly');
+    // };
+    // document.querySelector('#chat-message-input').focus();
+    // document.querySelector('#chat-message-input').onkeyup = function (e) {
+    //     if (e.key === 'Enter') { // enter, return
+    //         document.querySelector('#chat-message-submit').click();
+    //     }
+    // };
+    // document.querySelector('#chat-message-submit').onclick = function (e) {
+    //     const messageInputDom = document.querySelector('#chat-message-input');
+    //     const message = messageInputDom.value;
+
+    //     console.log(user);
+    //     chatSocket.send(JSON.stringify({
+    //         'message': [message, user]
+    //     }));
+    //     messageInputDom.value = '';
+    // };
     const chatSocket = new WebSocket(
-        'wss://'
+        'ws://'
         + window.location.host
         + '/ws/chat/'
         + roomName
@@ -50,17 +88,11 @@
     document.querySelector('#chat-message-submit').onclick = function (e) {
         const messageInputDom = document.querySelector('#chat-message-input');
         const message = messageInputDom.value;
-        const session = JSON.stringify({
-            'message': [message, user]
-        });
 
         console.log(user);
-        if (chatSocket.readyState !== 1) {
-            setInterval(chatSocket.send(session), 5000);
-        }
-        else {
-            chatSocket.send(session);
-        }
+        chatSocket.send(JSON.stringify({
+            'message': [message, user]
+        }));
         messageInputDom.value = '';
     };
 </script>
